# kosy

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  README_zh.md  pyproject.toml  vcpkg.json
.claude/: settings.json
.claude/rules/: 01-overview.md  02-build-and-test.md  03-coding-style.md  04-cmake.md  05-cpp-testing.md  06-general.md  07-workflow.md  08-python-conventions.md  09-security.md  10-todo-format.md  11-copyright.md
.cursor/rules/: kosy.mdc
.cursor/rules/basic/: copyright.mdc  development-workflow.mdc  general-coding-standards.mdc  security.mdc  todo-format.mdc
.cursor/rules/cmake/: cmake-coding-standards.mdc
.cursor/rules/cpp/: cpp-coding-standards.mdc  cpp-testing-guidelines.mdc
.cursor/rules/cursor_rules/: cursor-rules-coding-standards.mdc
.cursor/rules/python/: python-coding-standards.mdc  python-dependencies.mdc  python-testing-guidelines.mdc
.cursor/skills/compound-engineering/ce-session-retro/: SKILL.md
.cursor/skills/compound-engineering/setup/: SKILL.md
.cursor/skills/git/publishing-pr/: SKILL.md
.cursor/skills/git/splitting-pr/: SKILL.md  build-file-handling.md  examples.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/instructions/: cmake.instructions.md  copyright.instructions.md  cpp-coding-standards.instructions.md  cpp-testing.instructions.md  general.instructions.md  python-coding-standards.instructions.md  python-testing.instructions.md  security.instructions.md  todo-format.instructions.md  workflow.instructions.md
.github/workflows/: darwin-arm64.yml  ubuntu-x64.yml  windows-x64.yml
cmake/: Config.cmake.in  utils.cmake
cmake/toolchains/: linux-clang-x64.cmake
developers/houchen_li/archives/: 5_1_Ising_models.py
developers/houchen_li/personal_configs/: CMakeUserPresets.json
src/: CMakeLists.txt
src/kosy/: CMakeLists.txt  polynomial.hpp  polynomial_nb.cpp
src/kosy/utils/: CMakeLists.txt  aligned_allocator.hpp  aligned_memory_resource.hpp  chrono_inspector.hpp  concepts.hpp  exec_on_exit.hpp  logging.hpp  type_traits.hpp
tests/kosy/: CMakeLists.txt  calculate_volume.cpp  julia_set.py  julia_set_nb.py
