[project]
name = "kosy"
version = "0.1.0"
description = "Interview questions and answers (C++ and Python)."
requires-python = ">=3.14"
dependencies = [
  "cython",
  "loguru",
  "matplotlib",
  "nanobind",
  "numba",
  "numpy",
  "pyqt6",
  "pytest",
  "scipy",
]

[dependency-groups]
dev = [
  "pyright",
  "ruff",
]

[build-system]
requires = ["scikit-build-core", "nanobind>=2.0.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.31"
ninja.make-fallback = true
editable.mode = "redirect"
cmake.args = [
  "--preset=linux-gcc-x64"
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
